Bits32/BluePill/BLUEWORKSPAC/.metadata/.plugins/org.eclipse.cdt.ui/ADCtest2025.build.log
15:32:50 **** Incremental Build of configuration Debug for project ADCtest2025 ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/engines.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -I../USB_DEVICE/App -I../USB_DEVICE/Target -I../Middlewares/ST/STM32_USB_Device_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/engines.d" -MT"Core/Src/engines.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/engines.o"
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -I../USB_DEVICE/App -I../USB_DEVICE/Target -I../Middlewares/ST/STM32_USB_Device_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/engines.c: In function 'en_Init':
../Core/Src/engines.c:16:1: error: expected expression before '}' token
   16 | }
      | ^
../Core/Src/engines.c: In function 'pwm_value':
../Core/Src/engines.c:22:16: error: 'maxspeedValue' undeclared (first use in this function)
   22 |         if(pwm>maxspeedValue){
      |                ^~~~~~~~~~~~~
../Core/Src/engines.c:22:16: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Core/Src/subdir.mk:40: Core/Src/engines.o] Error 1
make: *** Waiting for unfinished jobs....
../Core/Src/main.c:60:1: error: unknown type name '_sEng'
   60 | _sEng motorL,motorR;
      | ^~~~~
make: *** [Core/Src/subdir.mk:40: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

15:32:53 Build Failed. 6 errors, 0 warnings. (took 2s.809ms)

